export const snapshot = {};

snapshot[`Build a markdown site 1`] = `8`;

snapshot[`Build a markdown site 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`Build a markdown site 3`] = `
[
]
`;

snapshot[`Build a markdown site 4`] = `
{
  content: "<h1>Normal page</h1>
<ul>
<li>List</li>
<li>Of</li>
<li>Elements</li>
</ul>
",
  data: {
    content: "# Normal page

- List
- Of
- Elements
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Basic page",
    url: "/basic/",
  },
  dest: {
    ext: ".html",
    path: "/basic/index",
  },
  src: {
    ext: ".md",
    path: "/basic",
    remote: undefined,
    slug: "basic",
  },
}
`;

snapshot[`Build a markdown site 5`] = `
{
  content: \`<p>Here is a footnote reference,<sup class="footnote-ref"><a href="#fn1" id="fnref1">[1]</a></sup> and another.<sup class="footnote-ref"><a href="#fn2" id="fnref2">[2]</a></sup></p>
<p>belong to the previous footnote.</p>
<h4 class="mt-3">Footnotes</h4>
<section class="footnotes">
<ol class="footnotes-list">
<li id="fn1" class="footnote-item"><p>Here is the footnote. <a href="#fnref1" class="footnote-backref">↩︎</a></p>
</li>
<li id="fn2" class="footnote-item"><p>Here's one with multiple blocks.</p>
<p>Subsequent paragraphs are indented to show that they <a href="#fnref2" class="footnote-backref">↩︎</a></p>
</li>
</ol>
</section>
\`,
  data: {
    content: "Here is a footnote reference,[^1] and another.[^longnote]

[^1]: Here is the footnote.

[^longnote]: Here's one with multiple blocks.

    Subsequent paragraphs are indented to show that they

belong to the previous footnote.
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/footnote/",
  },
  dest: {
    ext: ".html",
    path: "/footnote/index",
  },
  src: {
    ext: ".md",
    path: "/footnote",
    remote: undefined,
    slug: "footnote",
  },
}
`;

snapshot[`Build a markdown site 6`] = `
{
  content: '<p><a href="#foo" target="_blank">link</a></p>
',
  data: {
    content: "[link](#foo){target=_blank}
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-attributes/",
  },
  dest: {
    ext: ".html",
    path: "/with-attributes/index",
  },
  src: {
    ext: ".md",
    path: "/with-attributes",
    remote: undefined,
    slug: "with-attributes",
  },
}
`;

snapshot[`Build a markdown site 7`] = `
{
  content: '<pre><code class="language-html">&lt;p&gt;Example&lt;/p&gt;
</code></pre>
<pre><code>&lt;p&gt;Example without color highlight&lt;/p&gt;
</code></pre>
',
  data: {
    content: "\`\`\`html
<p>Example</p>
\`\`\`

\`\`\`
<p>Example without color highlight</p>
\`\`\`
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-code/",
  },
  dest: {
    ext: ".html",
    path: "/with-code/index",
  },
  src: {
    ext: ".md",
    path: "/with-code",
    remote: undefined,
    slug: "with-code",
  },
}
`;

snapshot[`Build a markdown site 8`] = `
{
  content: "<!-- deno-fmt-ignore-file -->
<dl>
<dt>This is a definition title</dt>
<dd>And this the description</dd>
<dd>Other description</dd>
<dt>Other title</dt>
<dd>And other description</dd>
</dl>
",
  data: {
    content: "<!-- deno-fmt-ignore-file -->
This is a definition title
: And this the description
: Other description

Other title
: And other description
",
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    url: "/with-deflist/",
  },
  dest: {
    ext: ".html",
    path: "/with-deflist/index",
  },
  src: {
    ext: ".md",
    path: "/with-deflist",
    remote: undefined,
    slug: "with-deflist",
  },
}
`;

snapshot[`Build a markdown site 9`] = `
{
  content: '<h1>Module <strong>example</strong></h1>

<div><p>Welcome to this <a href="/">page</a></p></div>
',
  data: {
    content: "<h1>{{ title | md(true) | safe }}</h1>

<div>{{ description | md | safe }}</div>
",
    date: 1970-01-01T00:00:00.000Z,
    description: "Welcome to this [page](/)
",
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Module **example**",
    url: "/with-filter/",
  },
  dest: {
    ext: ".html",
    path: "/with-filter/index",
  },
  src: {
    ext: ".njk",
    path: "/with-filter",
    remote: undefined,
    slug: "with-filter",
  },
}
`;

snapshot[`Build a markdown site 10`] = `
{
  content: '<h1>Module example</h1>
<p><a href="/">Back to home</a></p>
',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "tmpl.js,md",
    title: "Module example",
    url: "/with-module/",
  },
  dest: {
    ext: ".html",
    path: "/with-module/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/with-module",
    remote: undefined,
    slug: "with-module",
  },
}
`;

snapshot[`Build a markdown site 11`] = `
{
  content: '<!-- deno-fmt-ignore-file -->
<h1></h1>
<p>Foo</p>
<ul>
<li>one: <a href="/items/un.html">un</a></li>
<li>two: <a href="/items/dous.html">dous</a></li>
<li>three: <a href="/items/tres.html">tres</a></li>
</ul>
',
  data: {
    content: "<!-- deno-fmt-ignore-file -->
# {{ title }}

Foo

{% for title, no in myData %}
- {{ title }}: [{{ no }}](/items/{{ no }}.html)
{%- endfor %}
",
    date: 1970-01-01T00:00:00.000Z,
    myData: {
      one: "un",
      three: "tres",
      two: "dous",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    templateEngine: "njk,md",
    url: "/with-nunjucks/",
  },
  dest: {
    ext: ".html",
    path: "/with-nunjucks/index",
  },
  src: {
    ext: ".md",
    path: "/with-nunjucks",
    remote: undefined,
    slug: "with-nunjucks",
  },
}
`;
